--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,3 +1,4 @@
+
 <div class="alignleft">
   <h1><a href="<%- config.root %>"><%= config.title %></a></h1>
   <h2><a href="<%- config.root %>"><% if (config.subtitle){ %><%= config.subtitle %><% } %></a></h2>
@@ -7,6 +8,9 @@
     <% for (var i in theme.menu){ %>
       <li><a href="<%- theme.menu[i] %>"><%= i %></a></li>
     <% } %>
+	<li> <a href="/atom.xml">RSS</a> </li>
+    
+
   </ul>
   <div class="clearfix"></div>
 </nav>
