--- a/source/css/_base/layout.styl
+++ b/source/css/_base/layout.styl
@@ -4,10 +4,12 @@
 
 body
   background color-background
+  background-image url('/imgs/noise.png')
   color color-font
   font-family font-default
-  font-size 14px
-  text-shadow 0 0 1px transparent
+  font-size 16px
+  font-weight 500
+  text-shadow 0 0 2px transparent
   @media screen and (max-width: 1260px)
     margin 0 30px
   @media screen and (max-width: 600px)
@@ -29,7 +31,7 @@ a
   text-decoration none
   color color-link
   &:hover
-    text-decoration underline
+   color #102b6a
 
 .alignleft
   float left
