--- a/source/css/_base/variable.styl
+++ b/source/css/_base/variable.styl
@@ -1,15 +1,15 @@
 // Color
 color-background = #eee
-color-font = #444
-color-meta = #999
+color-font = black
+color-meta = #777
 color-border = #ddd
-color-link = #258fb8
+color-link = rgb(0, 133, 255)
 
 // Font
-font-default = "Helvetica Neue", "Helvetica", Arial, sans-serif
-font-serif = "Georgia", serif
+font-default = Georgia, 'Times New Roman', Times,'Songti SC', SimSun, "Microsoft YaHei" , serif
+font-serif = Georgia,"Times New Roman",Times,"Songti SC","SimSun",serif
 font-mono = Monaco, Menlo, Consolas, Courier New, monospace
-font-title = "Lato", Helvetica Neue, Helvetica, Arial, sans-serif
+font-title = Helvetica Neue, Helvetica, Arial, "Hiragino Sans GB", sans-serif
 
 @import url("//fonts.googleapis.com/css?family=Lato:400,400italic")
 
