--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -9,17 +9,17 @@
     
   h1
     font-weight normal
-    font-size 2.5em
+    font-size 3.5em
     line-height 1
 
   h2
     font-weight normal
-    font-size 0.9em
+    font-size 1.2em
     line-height 1
     margin-top 10px
   
   #main-nav
-    font-family font-title
+    font-family Georgia, 'Times New Roman', Times, 'Songti SC', SimSun, serif
     line-height 2.5em
     ul
       list-style none
