--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,5 +1,5 @@
 <article class="<%= item.layout %>">
-  <% if (item.photos && item.photos.length){ %>
+  <% if (item.photos){ %>
     <%- partial('post/gallery') %>
   <% } %>
   <div class="post-content">
@@ -32,8 +32,22 @@
       <% } else { %>
         <%- partial('post/category') %>
         <%- partial('post/tag') %>
-        <%- partial('post/share') %>
-      <% } %>
+<!-- Baidu Button BEGIN -->
+<div id="bdshare" class="bdshare_t bds_tools_32 get-codes-bdshare">
+<a class="bds_qzone"></a>
+<a class="bds_tsina"></a>
+<a class="bds_tqq"></a>
+<a class="bds_renren"></a>
+<a class="bds_t163"></a>
+<span class="bds_more"></span>
+<a class="shareCount"></a>
+</div>
+<script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=3326447" ></script>
+<script type="text/javascript" id="bdshell_js"></script>
+<script type="text/javascript">
+document.getElementById("bdshell_js").src = "http://bdimg.share.baidu.com/static/js/shell_v2.js?cdnversion=" + Math.ceil(new Date()/3600000)
+</script>
+<!-- Baidu Button END -->      <% } %>
       <div class="clearfix"></div>
     </footer>
   </div>
