--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,3 +1,7 @@
+<%
+if(page.layout !== 'false'){
+%>
+
 <%- partial('_partial/head') %>
 
 <body>
@@ -11,3 +15,9 @@
   <%- partial('_partial/after_footer') %>
 </body>
 </html>
+
+<%}else{ %>
+
+<%- page.content %>
+<%};%>
+<a href="https://github.com/silvasong" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" alt="Fork me on GitHub"></a>
